--- a/boites/templates/boites/boite_form.html
+++ b/boites/templates/boites/boite_form.html
@@ -108,6 +108,48 @@
             $(".led").css("width", matrixWidth*11+6);
             $(".led").css("height", matrixHeight*11+7);
 
+            bitmap1 =
+                [
+                    0,0,1,1,0,0,0,0,0,0,1,1,0,0,
+                    0,1,1,1,1,0,0,0,0,1,1,1,1,0,
+                    0,1,1,1,1,1,1,1,1,1,1,1,1,0,
+                    0,1,0,0,0,0,0,0,0,0,0,0,1,0,
+                    0,1,0,0,1,0,0,0,1,0,0,0,1,0,
+                    1,0,0,0,0,0,0,0,0,0,0,0,0,1,
+                    1,0,0,0,0,1,1,1,0,0,0,0,0,1,
+                    0,1,0,0,0,0,0,0,0,0,0,0,1,0,
+                    0,1,0,1,0,0,0,0,0,0,1,0,0,1,
+                    0,1,1,1,0,0,0,0,0,0,0,1,1,0,
+                    0,1,0,0,0,0,0,0,0,0,0,0,1,0,
+                    0,0,1,0,0,0,0,0,0,0,0,1,0,0,
+                    0,0,0,1,0,1,1,1,1,0,1,0,0,0,
+                    0,0,0,0,1,0,0,0,1,0,1,0,0,0,
+                    0,0,0,0,0,0,0,0,0,1,0,0,0,0
+            	];
+
+            bitmap2 =
+            [
+                0,0,1,1,0,0,0,0,0,0,1,1,0,0,
+                0,1,1,1,1,0,0,0,0,1,1,1,1,0,
+                0,1,1,1,1,1,1,1,1,1,1,1,1,0,
+                0,1,0,0,0,0,0,0,0,0,0,0,1,0,
+                0,1,0,0,0,1,0,0,0,1,0,0,1,0,
+                1,0,0,0,0,0,0,0,0,0,0,0,0,1,
+                1,0,0,0,0,0,1,1,1,0,0,0,0,1,
+                0,1,0,0,0,0,0,0,0,0,0,0,1,0,
+                1,0,0,1,0,0,0,0,0,0,1,0,1,0,
+                0,1,1,0,0,0,0,0,0,0,1,1,1,0,
+                0,1,0,0,0,0,0,0,0,0,0,0,1,0,
+                0,0,1,0,0,0,0,0,0,0,0,1,0,0,
+                0,0,0,1,0,1,1,1,1,0,1,0,0,0,
+                0,0,0,1,0,1,0,0,0,1,0,0,0,0,
+                0,0,0,0,1,0,0,0,0,0,0,0,0,0
+            ];
+
+            //draw(0, 0, bitmap1, 14, 16, '#fff');
+
+            //setInterval(flipSprite, 300);
+
             $.get( "tiles/{{ current_tile.id }}/?format=json", function( data ) {
                 $.each(data, function( label, app ) {
                     if(label == 'apps') {
