--- a/boites/templates/boites/boite_create_app.html
+++ b/boites/templates/boites/boite_create_app.html
@@ -10,7 +10,7 @@
 
 {% block body %}
     <div class="row">
-        <ul class="breadcrumb">
+        <ul class="breadcrumb hidden-xs hidden-sm">
             <li><a href="{% url 'boites:list' %}">{% trans "Mes boîtes" %}</a></li>
             <li><a href="{% url 'boites:update' boite.id %}">{{ boite.name }}</a></li>
             <li><a href="{% url 'boites:apps' boite.id %}">Apps</a></li>
