--- a/boites/templates/boites/boite_form.html
+++ b/boites/templates/boites/boite_form.html
@@ -105,50 +105,9 @@
             for(var pixels = 0; pixels < matrixWidth*matrixHeight;	pixels++)
                 $(".led ul").append("<li></li>");
 
+            // each .led pixel is 11×11px and we need a bit of margin-right and margin-bottom
             $(".led").css("width", matrixWidth*11+6);
             $(".led").css("height", matrixHeight*11+7);
-
-            bitmap1 =
-                [
-                    0,0,1,1,0,0,0,0,0,0,1,1,0,0,
-                    0,1,1,1,1,0,0,0,0,1,1,1,1,0,
-                    0,1,1,1,1,1,1,1,1,1,1,1,1,0,
-                    0,1,0,0,0,0,0,0,0,0,0,0,1,0,
-                    0,1,0,0,1,0,0,0,1,0,0,0,1,0,
-                    1,0,0,0,0,0,0,0,0,0,0,0,0,1,
-                    1,0,0,0,0,1,1,1,0,0,0,0,0,1,
-                    0,1,0,0,0,0,0,0,0,0,0,0,1,0,
-                    0,1,0,1,0,0,0,0,0,0,1,0,0,1,
-                    0,1,1,1,0,0,0,0,0,0,0,1,1,0,
-                    0,1,0,0,0,0,0,0,0,0,0,0,1,0,
-                    0,0,1,0,0,0,0,0,0,0,0,1,0,0,
-                    0,0,0,1,0,1,1,1,1,0,1,0,0,0,
-                    0,0,0,0,1,0,0,0,1,0,1,0,0,0,
-                    0,0,0,0,0,0,0,0,0,1,0,0,0,0
-            	];
-
-            bitmap2 =
-            [
-                0,0,1,1,0,0,0,0,0,0,1,1,0,0,
-                0,1,1,1,1,0,0,0,0,1,1,1,1,0,
-                0,1,1,1,1,1,1,1,1,1,1,1,1,0,
-                0,1,0,0,0,0,0,0,0,0,0,0,1,0,
-                0,1,0,0,0,1,0,0,0,1,0,0,1,0,
-                1,0,0,0,0,0,0,0,0,0,0,0,0,1,
-                1,0,0,0,0,0,1,1,1,0,0,0,0,1,
-                0,1,0,0,0,0,0,0,0,0,0,0,1,0,
-                1,0,0,1,0,0,0,0,0,0,1,0,1,0,
-                0,1,1,0,0,0,0,0,0,0,1,1,1,0,
-                0,1,0,0,0,0,0,0,0,0,0,0,1,0,
-                0,0,1,0,0,0,0,0,0,0,0,1,0,0,
-                0,0,0,1,0,1,1,1,1,0,1,0,0,0,
-                0,0,0,1,0,1,0,0,0,1,0,0,0,0,
-                0,0,0,0,1,0,0,0,0,0,0,0,0,0
-            ];
-
-            //draw(0, 0, bitmap1, 14, 16, '#fff');
-
-            //setInterval(flipSprite, 300);
 
             $.get( "tiles/{{ current_tile.id }}/?format=json", function( data ) {
                 $.each(data, function( label, app ) {
