--- a/boites/templates/boites/boite_apps.html
+++ b/boites/templates/boites/boite_apps.html
@@ -44,8 +44,8 @@
 
 {% block scripts %}
     <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}font.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}gfx.js"></script>
+    <script type="text/javascript" src="{% static 'js/font.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/gfx.js' %}"></script>
     {% include "_scripts.html" %}
     <script type="text/javascript">
         $(document).ready(function(){
