--- a/boites/templates/tiles/tile_form.html
+++ b/boites/templates/tiles/tile_form.html
@@ -73,8 +73,8 @@
 
 {% block scripts %}
     <script type="text/javascript" src="{% static 'admin/js/vendor/jquery/jquery.js' %}"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}font.js"></script>
-    <script type="text/javascript" src="{{ STATIC_URL }}gfx.js"></script>
+    <script type="text/javascript" src="{% static 'js/font.js' %}"></script>
+    <script type="text/javascript" src="{% static 'js/gfx.js' %}"></script>
     <script type="text/javascript">
         var matrixWidth = 32,
             matrixHeight= 16;
