--- a/boites/templates/boites/boite_form.html
+++ b/boites/templates/boites/boite_form.html
@@ -41,7 +41,7 @@
                     <label class="control-label" for="id_api_key">{{ api_key.verbose_name }}</label>
                     <div class=" ">
                         <div class="input-group">
-                            <input disabled class="form-control" id="id_{{ api_key.name}}" maxlength="36" name="{{ api_key.name}}" value="{{ boite.api_key }}" type="text">
+                            <input readonly class="form-control" id="id_{{ api_key.name}}" maxlength="36" name="{{ api_key.name}}" value="{{ boite.api_key }}" type="text">
                             <span class="input-group-btn">
                               <a href="{% url 'boites:generate' object.id %}" class="btn btn-info"><i class="fa fa-refresh"></i></a>
                             </span>
@@ -72,7 +72,7 @@
                 		<div class="modal-content">
                 			<div class="modal-header">
                 				<button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                				<h4 class="modal-title" id="apiModalLabel">{% trans "JSON envoyé à" %} {{ object.name }}</h4>
+                				<h4 class="modal-title" id="apiModalLabel">{% trans "JSON envoyé à" %} {{ object.name|lower }}</h4>
                 			</div>
                 			<div class="modal-body">
                                 <p>
