--- a/boites/templates/boites/boite_app.html
+++ b/boites/templates/boites/boite_app.html
@@ -1,5 +1,5 @@
 {% load i18n %}
-<a href="{% if app.pk == "create" %}../{% endif %}{{ app.app_label|slice:"13:" }}/{{ app.pk }}/" class="app">
+<a href="{% if app.pk == "homepage" %}#{% else %}{% if app.pk == "create" %}../{% endif %}{{ app.app_label|slice:"13:" }}/{{ app.pk }}/{% endif %}" class="app">
     <div class="col-xs-6 col-md-3">
         <div class="panel panel-app">
             <div class="panel-heading"><strong><i class="fa fa-{% block app_icon %}{% endblock %}" aria-hidden="true"></i>&nbsp;{{ app.verbose_name }}</strong></div>
@@ -11,20 +11,22 @@
                 {% endif %}
             </div>
             {% if app.pk != "create" %}
-            <div class="panel-footer">
-                <div>
-                    {% if app.pk %}
-                    <span class="{% if app.pk and app.enabled %}text-success{% elif app.pk and not app.enabled %}text-danger{% endif %}">
-                        <span class="fa-stack">
-                            <i class="fa fa-circle fa-stack-1x"></i>
-                            <i class="fa fa-circle-o fa-stack-1x fa-inverse"></i>
+                {% if app.pk != "homepage" %}
+                <div class="panel-footer">
+                    <div>
+                        {% if app.pk %}
+                        <span class="{% if app.pk and app.enabled %}text-success{% elif app.pk and not app.enabled %}text-danger{% endif %}">
+                            <span class="fa-stack">
+                                <i class="fa fa-circle fa-stack-1x"></i>
+                                <i class="fa fa-circle-o fa-stack-1x fa-inverse"></i>
+                            </span>
                         </span>
-                    </span>
-                    {% else %}
-                    <span>&nbsp;</span>
-                    {% endif %}
+                        {% else %}
+                        <span>&nbsp;</span>
+                        {% endif %}
+                    </div>
                 </div>
-            </div>
+                {% endif %}
             {% endif %}
         </div>
     </div>
