pushbutton css rules added

--- a/static/src/less/laboite.less
+++ b/static/src/less/laboite.less
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Kreon');
 
 body.boite-update .boite-update,
+body.boite-pushbutton .boite-pushbutton,
 body.boite-delete .boite-delete,
 body.boite-apps .boite-apps {
     z-index: 2; // Place active items above their siblings for proper border styling
