--- a/laboite/apps/bitmap/templates/bitmap_app.html
+++ b/laboite/apps/bitmap/templates/bitmap_app.html
@@ -30,4 +30,4 @@
         <ul></ul>
     </div>
 {% endblock %}
-{% block app_description %}{% trans "Affiche une icône et des informations personnalisées" %}{% endblock %}
+{% block app_description %}{% trans "Affiche une icône personnalisée" %}{% endblock %}
