navbar-toggle button color changed

--- a/static/src/less/custom.less
+++ b/static/src/less/custom.less
@@ -14,7 +14,9 @@ footer {
 p.login-signup {
     margin-top: 20px;
 }
-
+.navbar-toggle {
+    color: white;
+}
 .feature-columns {
     .make-row();
 
