--- a/boites/templates/tiles/tile_form.html
+++ b/boites/templates/tiles/tile_form.html
@@ -27,7 +27,7 @@
                 <ol>
                     <li>{% trans "Sélectionnez dans un premier temps l'app que vous souhaitez ajouter sur la tuile dans la section" %} <a href="#available_apps">{% trans "apps disponibles" %}</a> {% trans "ci-dessous" %}.</li>
                     <li>{% trans "Une fois selectionnée, cette app apparaît dans" %} <a href="#enabled_apps">{% trans "apps activées" %}</a>.</li>
-                    <li>{% trans "Vous pouvez alors cliquer sur cette app et le positionner sur la tuile ci-dessus" %}.</li>
+                    <li>{% trans "Vous pouvez alors cliquer sur cette app et le positionner sur l'écran ci-dessus" %}.</li>
                     <li>{% trans "Appuyez sur le bouton" %} <a href="{% url 'boites:update' boite_id %}?tile={{ object.id }}" class="btn btn-info btn-xs"><i class="fa fa-play" aria-hidden="true"></i></a> {% trans "pour visualiser cette tuile sur le simulateur." %}</li>
                 </ol>
             </p>
