--- a/laboite/apps/traffic/templates/traffic_app.html
+++ b/laboite/apps/traffic/templates/traffic_app.html
@@ -7,4 +7,4 @@
   <span class="badge">{{ app.instance.trip_duration|default:"0" }} {% trans "minutes" %}</span><br>
   {{ app.instance.trajectory_name|default:"" }}
 {% endblock %}
-{% block app_description %}{% trans "Affiche la durée d'un trajet en fonction du traffic" %}{% endblock %}
+{% block app_description %}{% trans "Affiche la durée d'un trajet en fonction du trafic" %}{% endblock %}
