--- a/laboite/templates/site_base.html
+++ b/laboite/templates/site_base.html
@@ -14,6 +14,11 @@
 
 
 {% block extra_head_base %}
+    <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{% static 'img/favicon144.png' %}">
+    <link rel="apple-touch-icon-precomposed" sizes="114x114" href="{% static 'img/favicon114.png' %}">
+    <link rel="apple-touch-icon-precomposed" sizes="72x72" href="{% static 'img/favicon72.png' %}">
+    <link rel="apple-touch-icon-precomposed" href="{% static 'img/favicon57.png' %}">
+    <link rel="shortcut icon" href="{% static 'img/favicon32.png' %}">
     {% block extra_head %}{% endblock %}
 {% endblock %}
 
