minor rendering bugs fixed

--- a/boites/templates/boites/boite_form.html
+++ b/boites/templates/boites/boite_form.html
@@ -238,7 +238,7 @@
                                             break;
                                         case 2:
                                             {% if boite.screen == 1 %}
-                                                printText(value.x, value.y, value.content.toString(), '#000');
+                                                printText(value.x, value.y, value.content.toString(), '#fff');
                                             {% else %}
                                                 printText(value.x, value.y, value.content.toString(), '#18bc9c');
                                             {% endif %}
